kubernetes/flux/apps/home/media/radarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
spec:
  rules:
    - host: radarr.apps.blizzard.internal
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: radarr
              port:
                number: 7878
  tls:
    - hosts:
        - radarr.apps.blizzard.internal
      secretName: radarr-certificate-tls
